--- a/css/general.css
+++ b/css/general.css
@@ -1,21 +1,119 @@
 @charset "utf-8";
 
-@-moz-viewport { width: device-width; scale: 1; }
-@-ms-viewport { width: device-width; scale: 1; }
-@-o-viewport { width: device-width; scale: 1; }
-@-webkit-viewport { width: device-width; scale: 1; }
-@viewport { width: device-width; scale: 1; }
+@-moz-viewport { width: device-width; scale: 1; } 
+@-ms-viewport { width: device-width; scale: 1; } 
+@-o-viewport { width: device-width; scale: 1; } 
+@-webkit-viewport { width: device-width; scale: 1; } 
+@viewport { width: device-width; scale: 1; } 
 
-body { 
-    -moz-text-size-adjust: 100%;
+* {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.billboard {
+    overflow: hidden;
+    background-image: url(images/middleearthmap.jpg);
+}
+
+html {     
+	-moz-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	text-size-adjust: 100%;
+    font-size: 100%; 
+    font-family: Georgia, Times, serif;
+}
+
+img { 
+	width: 100%;
+    display: block;
+}
+
+body { 
     background: url(images/lordoftheringslettering.jpg);
+    margin: 0;
+    padding: 0;
 }
 
 .masthead {
     background-color: black;
-    overflow: hidden; 
+    overflow: hidden;
 }
-    
+
+.logo {
+    height: 4.5rem;
+    width: auto;
+    margin: .5rem 5%;
+}
+
+article {
+    margin: 0;
+    padding: 0 5%;
+    overflow: hidden;
+}
+
+h1 {
+    color: gold;
+    margin: 1.5rem 0;
+    font-size: 5rem;
+    line-height: 5rem;
+    text-shadow: 5px 5px #000;
+}
+
+h1 + p {
+    color: gold;
+    font-size: 1.25rem;
+    margin: 0 0 1.5rem;
+    line-height: 1.7rem;
+} 
+
+.dropcap:first-letter {
+    font-size: 4.8rem;
+    font-weight: bold;
+    float: left;
+    margin: 1.3rem .2rem 1rem 0;
+    color: gold;
+}
+
+p {
+    color: gold;
+    line-height: 1.5rem;
+    margin: 0 0 1.5rem;
+}
+
+figure {
+    margin: 0 auto 1.5rem;
+    width: 100%;  
+}
+
+figcaption { 
+    color: gold;
+    font-size: .75rem;
+    margin: .5rem 0;
+}
+
+footer { 
+    background-color: black;
+    overflow: hidden;
+}
+
+footer p {
+    color: white;
+    margin: .5rem 5% 4rem;
+    font-size: .75rem;
+}
+
+footer a {
+    color: gold;
+}
+
+h2 {
+    font-size: 2rem;
+    color: gold;
+}
+
+ol {
+    color: gold;
+}
